--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "version": "1.0.0",
   "private": true,
-  "homepage": "http://a35joshi.github.io",
+  "homepage": "https://a35joshi.github.io",
   "dependencies": {
     "@date-io/date-fns": "^1.3.6",
     "@material-ui/core": "^4.3.1",
