--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "material-ui": "^1.0.0-beta.47",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "react-pdf": "4.1.0",
+    "pdfjs-dist": "2.1.266",
     "notistack": "^0.8.8",
     "qwest": "^4.5.0",
     "react": "^16.8.6",
