--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
+
 {
+  "homepage": "https://a35joshi.github.io",
   "name": "matx-react",
   "author": "ui-lib",
   "license": "MIT",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://a35joshi.github.io",
   "dependencies": {
     "@date-io/date-fns": "^1.3.6",
     "@material-ui/core": "^4.3.1",
@@ -63,7 +64,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -b create-react-app -d build"
+    "deploy": "gh-pages -d src"
   },
   "eslintConfig": {
     "extends": "react-app"
